# AsteroidsGame

./: .gitignore  .gitmodules  CMakeLists.txt
src/: AsteroidsGameConfig.h.in  application.cpp  application.h  main.cpp
src/builders/: entityBuilder.h
src/builders/sources/: entityBuilder.cpp
src/ecs/: componentPool.h  componentPool.tpp  iComponentPool.h
src/ecs/components/: collider.h  controller.h  fleeting.h  spawner.h  sprite.h  transform.h
src/ecs/components/abstractions/: component.h
src/ecs/components/sources/: collider.cpp  controller.cpp  fleeting.cpp  spawner.cpp  sprite.cpp  transform.cpp
src/managers/: entityManager.h  inputManager.h  renderManager.h  timeManager.h
src/managers/sources/: entityManager.cpp  entityManager.tpp  inputManager.cpp  renderManager.cpp  timeManager.cpp
src/math/: tools.h  vector2.h
src/math/sources/: tools.tpp  vector2.cpp
